--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stacks/transactions": "^7.3.1",
     "@stacks/wallet-sdk": "^7.2.0",
     "@types/node": "^24.4.0",
+    "bip39": "^3.1.0",
     "chokidar-cli": "^3.0.0",
     "vitest": "^4.0.18",
     "vitest-environment-clarinet": "^3.0.0"
